[bdist_wheel]
universal = 1

[aliases]
test = pytest

[metadata]
license_file = LICENSE

[flake8]
ignore = W503
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.md,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    flloat/__init__.py,
max-complexity = 10
max-line-length = 99
per-file-ignores =

[mypy]
python_version = 3.7
strict_optional = True

# Per-module options:

[mypy-numpy]
ignore_missing_imports = True

[mypy-pythomata.*]
ignore_missing_imports = True

# Per-module options for tests dir:

[mypy-pytest]
ignore_missing_imports = True
